# drl_vo_nav

./: CMakeLists.txt  README.md  requirements.txt  run_drl_vo_navigation_demo.sh  run_drl_vo_policy_training_desktop.sh  run_drl_vo_policy_training_server.sh  test.sh
cnn_msgs/: CMakeLists.txt  package.xml
cnn_msgs/msg/: CNN_data.msg
drl_vo/: package.xml
drl_vo/launch/: drl_vo_nav.launch  drl_vo_nav_train.launch  nav_cnn_data.launch  publish_goal_sequence.launch  publish_goal_sequence_for_cumberland.launch  publish_goal_sequence_for_freiburg.launch  publish_goal_sequence_for_square.launch
drl_vo/src/: cmd_vel_pub.py  cnn_data_pub.py  custom_cnn_full.py  drl_vo_inference.py  drl_vo_train.py  goal_visualize.py  publish_goal_sequence.py  pure_pursuit.py  robot_pose_pub.py  track_ped_pub.py
drl_vo/src/turtlebot_gym/turtlebot_gym/: __init__.py
drl_vo/src/turtlebot_gym/turtlebot_gym.egg-info/: PKG-INFO  SOURCES.txt
drl_vo/src/turtlebot_gym/turtlebot_gym/envs/: __init__.py  drl_nav_env.py  gazebo_connection.py
launch/: drl_vo_inference.launch  drl_vo_nav.launch  drl_vo_nav_train.launch  drl_vo_train.launch  nav_cnn_data.launch  publish_goal_sequence_for_autolab.launch
src/: goal_visualize.py  publish_goal_sequence.py  pure_pursuit.py  robot_pose_pub.py
src/runs/: monitor.csv
src/runs/drl_vo_policy_1/: events.out.tfevents.1645060567.PC.109.0
src/runs/drl_vo_policy_2/: events.out.tfevents.1645060792.PC.19579.0
src/turtlebot_gym/: setup.py
src/turtlebot_gym/turtlebot_gym/envs/: __init__.py  drl_nav_env.py
