<?xml version="1.0"?>
<package>
  <name>cnn_msgs</name>
  <version>1.1.3</version>
  <description>CNN Data Package</description>
  <maintainer email="xzt">xzt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/darknet_ros</url>
  <author email="xzt">xzt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
